*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6293 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -76,6 +76,7 @@ Ascending.gif \
 Descending.gif \
 DownTriangle.gif \
 PoweredByGNUstep.gif \
+PoweredByGNUstepWeb.gif \
 RightTriangle.gif \
 Unsorted.gif \
 appOff.gif \
