2000-03-31  Manuel Guesdon <mguesdon@orange-concept.com>
        * GSWResourceManager.m: Added Debug Error Traces
        * GSWConstants.m: change frameworks extensions in debug mode
        * GSWeb.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
        * GSWExtensions.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
        * GSWExtensionsGSW.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6404 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -99,8 +99,16 @@ gswappsrv.gif
 GSWBUNDLE_INSTALL = $(BUNDLE_NAME)
 GSWBUNDLE_INSTALL_DIR = $(GNUSTEP_LIBRARIES_ROOT)/gsweb
 
-# Use .gdladaptor as the bundle extension
-GSWBUNDLE_EXTENSION = .framework
+# Determine the bundle directory extension
+ifeq ($(profile), yes)
+  GSWBUNDLE_EXTENSION = .frameworkp
+else
+  ifeq ($(debug), yes)
+    GSWBUNDLE_EXTENSION = .frameworkd
+  else
+    GSWBUNDLE_EXTENSION = .framework
+  endif
+endif
 
 # The Objective-C source files to be compiled
 GSWExtensions_OBJC_FILES = \
