*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6893 72102866-910b-0410-8b05-ffd578937521

--- a/GSWAdaptors/Apache/GNUmakefile
+++ b/GSWAdaptors/Apache/GNUmakefile
@@ -42,7 +42,7 @@ else
 	endif
 endif
 
-APACHEHEADERS := -I/usr/apache/include -I/usr/local/include/apache -I/usr/lib/apache/include
+APACHEHEADERS := -I/usr/apache/include -I/usr/include/apache -I/usr/local/include/apache -I/usr/lib/apache/include
 
 APXS := $(APXS) -l PropList -L/usr/local/lib
 
