Changed frameworks names
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@12372 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/Resources/Info-Hello.plist
+++ b/Examples/hello/Resources/Info-Hello.plist
@@ -6,8 +6,8 @@
 			        GSWApplicationBaseURL = "/GSW";
 			        GSWFrameworksBaseURL = "/GSW/frameworks";
 			        GSWLoadFrameworks = (
-								            "gsweb/GSWExtensionsGSW",
-								            "gsweb/GSWExtensions"
+								            "GSWExtensionsGSW",
+								            "GSWExtensions"
 								        );
 			        GSWMonitorAppConfFilePath = "/etc/httpd/conf/GSWebMonitor.conf";
 			        GSWSessionTimeOut = 1200;
