--- a/GSWExtensions.framework/Makefile.preamble
+++ b/GSWExtensions.framework/Makefile.preamble
@@ -1,6 +1,6 @@
-#   Copyright (C) 1999 Free Software Foundation, Inc.
+#   Copyright (C) 1999-2002 Free Software Foundation, Inc.
 #   
-#   Written by:	Manuel Guesdon <mguesdon@sbuilders.com>
+#   Written by:	Manuel Guesdon <mguesdon@orange-concept.com>
 #   Date: 		Jan 1999
 #   
 #   This file is part of the GNUstep Web Library.
@@ -37,9 +37,21 @@ ADDITIONAL_CPPFLAGS =
 
 # Additional flags to pass to the Objective-C compiler
 ifeq ($(GDL2), yes)
-	ADDITIONAL_OBJCFLAGS = -DUSE_BUILTIN -DGDL2
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DUSE_BUILTIN -DGDL2
 else
-	ADDITIONAL_OBJCFLAGS = -DUSE_BUILTIN
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DUSE_BUILTIN
+endif
+
+ifeq ($(GSWDEBUG_MEM), yes)
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_MEM
+endif
+
+ifeq ($(GSWDEBUG_LOCK), yes)
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_LOCK
+endif
+
+ifeq ($(GSWDEBUG_DEEP), yes)
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_DEEP
 endif
 
 # Additional flags to pass to the C compiler
