2002-03-25  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWConfig.c: changed comments
	* GSWeb.framework/GSWSwitchComponent.h/.m:
		o ivar names changes to conform to coding standards
		o logs
	* GSWeb.framework/GSWComponentContent.h/.m:
		o ivar names changes to conform to coding standards
		o logs
	* GSWAdaptors/common/GSWTemplates.c:
		o change .gif to .png
	* GSWeb.framework/GSWAssociation.m:
		o Added Key/Value association conversion in associationsSetValuesFromObject:inObject:
	* GSWeb.framework/GSWKeyValueAssociation.m:
		o removed validateValue in -setValue:inObject:
		o logs
	* GSWeb.framework/GSWConstantValueAssociation.m
		o logs


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@13232 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -151,7 +151,6 @@ GSWExtensions_AGSDOC_FILES = gswextensions.gsdoc $(GSWExtensions_AUTOGSDOC_HEADE
 GSWExtensions_AGSDOC_FLAGS = \
 	-Declared Foundation \
 	-Standards YES \
-	-SystemProjects System \
 	-Project gswextensions \
 	-WordMap '{\
 	FOUNDATION_EXPORT=extern;FOUNDATION_STATIC_INLINE="";\
@@ -161,6 +160,7 @@ GSWExtensions_AGSDOC_FLAGS = \
 	GS_ZONE_SCOPE=extern;GS_ZONE_ATTR="";\
 	}' -Up gswextensions
 
+#	-SystemProjects System \
 
 #DIST_FILES = $(SRCS) $(HDRS) GNUmakefile Makefile.postamble Makefile.preamble
 
